update email + add link highlights

--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,9 @@
 }
 
 .App-header {
-  background: #8a2387; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #f27121,
-    #e94057,
-    #8a2387
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #f27121,
-    #e94057,
-    #8a2387
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #8a2387;
+  background: -webkit-linear-gradient(to right, #f27121, #e94057, #8a2387);
+  background: linear-gradient(to right, #f27121, #e94057, #8a2387);
 
   min-height: 100vh;
   display: flex;
@@ -32,4 +22,8 @@
 
 .App-link {
   color: white;
+}
+
+a:hover {
+  color: #e0e0e0;
 }
