--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,28 @@
 }
 
 .App-header {
-  background: #8a2387;
+  background: #24c6dc; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to bottom,
+    #24c6dc,
+    #514a9d
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to bottom,
+    #24c6dc,
+    #514a9d
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+  /* background: #8a2387;
   background: -webkit-linear-gradient(to right, #f27121, #e94057, #8a2387);
-  background: linear-gradient(to right, #f27121, #e94057, #8a2387);
+  background: linear-gradient(to right, #f27121, #e94057, #8a2387); */
 
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(70px + 2vmin);
+  font-size: calc(80px + 2vmin);
   color: white;
 }
 
